Switch from a_info accesses to artifacts_get()

--- a/src/Makefile.src
+++ b/src/Makefile.src
@@ -106,6 +106,7 @@ ANGFILES = \
 	monster/mon-spell.o \
 	monster/mon-timed.o \
 	monster/mon-util.o \
+	object/artifact.o \
 	object/chest.o \
 	object/identify.o \
 	object/obj-desc.o \
