--- a/src/Makefile.osx
+++ b/src/Makefile.osx
@@ -10,9 +10,13 @@ CC = clang
 LD = ld
 OPT ?= -O2
 
+# the CFBundleExecutable plist value is used within the app, so we want it to match the bundle name to make everything look right
 NAME = Angband
 APPNAME = $(NAME).app
-EXE = angband
+EXE = $(NAME)
+
+# for consistency with older versions, use a lower case bundle ID
+BUNDLE_IDENTIFIER = org.rephial.angband
 
 ARCH = -arch i386 -arch x86_64
 WARNINGS = -W -Wall -Wno-unused-parameter -Wno-missing-field-initializers
@@ -42,11 +46,9 @@ ifneq ($(autoconf),)
 CFLAGS += -DHAVE_CONFIG_H
 endif
 
-# Note that Makefile.inc sets VERSION, and so we must run version.sh after
-# including Makefile.inc
+# let Makefile.inc set VERSION and then we'll use the detailed build ID as the bundle version (visible in "About Angband")
 include Makefile.inc
-
-VERSION := $(shell ../scripts/version.sh)
+BUNDLE_VERSION := $(shell ../scripts/version.sh)
 CFLAGS += -DBUILD_ID=${VERSION}
 
 BOBJS = borg1.o borg2.o borg3.o borg4.o borg5.o borg6.o borg7.o borg8.o borg9.o
@@ -78,7 +80,7 @@ borg: $(OBJS) $(BOBJS)
 #
 
 clean:
-	-rm -f $(OBJS) $(EXE) $(EXE).o.i386 $(EXE).o $(OSX_OBJS)
+	-rm -f $(OBJS) $(EXE) $(EXE).o.i386 $(EXE).o.x86_64 $(EXE).o $(OSX_OBJS)
 
 
 #
@@ -162,8 +164,12 @@ install: $(EXE) $(ICONFILES) $(PLIST) $(LIBFILES)
 	install -m 755 $(EXE) $(APPBIN)
 	install -m 644 $(ICONFILES) $(APPRES)
 	cp cocoa/English.lproj/MainMenu.nib/*ib $(APPRES)/English.lproj/MainMenu.nib
-	sed -e 's/\$$VERSION\$$/$(VERSION)/' -e 's/\$$COPYRIGHT\$$/$(COPYRIGHT)/' \
-		-e 's/\$$NAME\$$/$(NAME)/' -e 's/\$$EXECUTABLE\$$/$(EXE)/' \
+	sed -e 's/\$$VERSION\$$/$(VERSION)/' \
+		-e 's/\$$COPYRIGHT\$$/$(COPYRIGHT)/' \
+		-e 's/\$$NAME\$$/$(NAME)/' \
+		-e 's/\$$EXECUTABLE\$$/$(EXE)/' \
+		-e 's/\$$BUNDLE_VERSION\$$/$(BUNDLE_VERSION)/' \
+		-e 's/\$$BUNDLE_IDENTIFIER\$$/$(BUNDLE_IDENTIFIER)/' \
 		$(PLIST) > $(APPCONT)/Info.plist
 
 	SetFile -a B $(APPBNDL)
