Try to avoid a situation where the game can have an empty version string.

--- a/src/Makefile.osx
+++ b/src/Makefile.osx
@@ -51,6 +51,10 @@ endif
 # let Makefile.inc set VERSION and then we'll use the detailed build ID as the bundle version (visible in "About Angband")
 include Makefile.inc
 BUNDLE_VERSION := $(shell ../scripts/version.sh)
+ifeq (${BUNDLE_VERSION},)
+	BUNDLE_VERSION := ${VERSION}
+endif
+
 CFLAGS += -DBUILD_ID=${VERSION}
 
 BOBJS = borg1.o borg2.o borg3.o borg4.o borg5.o borg6.o borg7.o borg8.o borg9.o
