--- a/src/Makefile.osx
+++ b/src/Makefile.osx
@@ -21,7 +21,8 @@ EXE = angband
 BUNDLE_IDENTIFIER = org.rephial.angband
 
 ARCH = -arch i386 -arch x86_64
-WARNINGS = -W -Wall -Wno-unused-parameter -Wno-missing-field-initializers
+WARNINGS = -W -Wall -Wno-unused-parameter -Wno-missing-field-initializers \
+	-Wunused-macros -Wunreachable-code
 JUST_C = -std=c99 -Wdeclaration-after-statement
 OBJ_CFLAGS = -std=c99 -x objective-c -mmacosx-version-min=10.5
 CFLAGS = -g -I. $(WARNINGS) $(OPT) -DMACH_O_CARBON -DHAVE_MKSTEMP \
