Create modules for blow methods and effects.

--- a/src/Makefile.src
+++ b/src/Makefile.src
@@ -103,6 +103,8 @@ ANGFILES = \
 	monster/melee1.o \
 	monster/melee2.o \
 	monster/mon-list.o \
+	monster/mon-blow-effects.o \
+	monster/mon-blow-methods.o \
 	monster/mon-lore.o \
 	monster/mon-make.o \
 	monster/mon-msg.o \
