--- a/src/Makefile.src
+++ b/src/Makefile.src
@@ -5,7 +5,7 @@
 # across a range of different makefiles, to cut down on maintenance.
 #
 
-VERSION = 3.0.9
+VERSION = 3.0.9a
 
 HDRS = h-basic.h
 INCS = angband.h config.h defines.h externs.h types.h \
