--- a/src/Makefile.src
+++ b/src/Makefile.src
@@ -5,7 +5,7 @@
 # across a range of different makefiles, to cut down on maintenance.
 #
 
-VERSION = 3.3.0
+VERSION = 3.3.1
 COPYRIGHT = (c) 1995-2011 Angband contributors
 
 HEADERS = \
@@ -90,6 +90,7 @@ ANGFILES = \
 	monster/mon-msg.o \
 	monster/mon-power.o \
 	monster/mon-spell.o \
+	monster/mon-timed.o \
 	monster/mon-util.o \
 	object/identify.o \
 	object/obj-desc.o \
