--- a/src/Makefile.src
+++ b/src/Makefile.src
@@ -111,6 +111,7 @@ ANGFILES = \
 	object/obj-desc.o \
 	object/obj-flag.o \
 	object/obj-info.o \
+	object/obj-list.o \
 	object/obj-make.o \
 	object/obj-power.o \
 	object/obj-ui.o \
