Add sound names to z-msg-list and fix some things in sound.cfg. [1748]

--- a/lib/xtra/sound/sound.cfg
+++ b/lib/xtra/sound/sound.cfg
@@ -165,6 +165,9 @@ blessed = sum_angel_song.mp3
 # You feel heroic.
 hero = pls_tone_goblet.mp3
 
+# You are bold.
+bold = pls_tone_goblet.mp3
+
 # You become berserk.
 berserk = pls_man_scream2.mp3
 
@@ -394,7 +397,7 @@ multiply = mco_frog_trill.mp3
 summon_monster = sum_chime_jangle.mp3
 
 # Summon angels.
-summon_angel = sum_angel_song.mp3
+summon_ainu = sum_angel_song.mp3
 
 # Summon undead.
 summon_undead = sum_ghost_oooo.mp3
