--- a/lib/xtra/sound/sound.cfg
+++ b/lib/xtra/sound/sound.cfg
@@ -166,7 +166,7 @@ blessed = sum_angel_song.mp3
 hero = pls_tone_goblet.mp3
 
 # You are bold.
-bold = pls_tone_goblet.mp3
+bold = pls_bell_hibell_soft.mp3
 
 # You become berserk.
 berserk = pls_man_scream2.mp3
@@ -336,7 +336,7 @@ mon_kick = mco_rubber_thud.mp3
 mon_claw = mco_ceramic_trill.mp3 mco_scurry_dry.mp3
 
 # Attack - bite
-mon_bite = mco_snarl_short.mp3  mco_bite_crunch.mp3  mco_bite_soft.mp3  mco_bite_munch.mp3  mco_bite_long.mp3  mco_bite_short.mp3  mco_bite_gnash.mp3  mco_bite_chomp.mp3  mco_bite_regular.mp3  mco_bite_small.mp3  mco_bite_dainty.mp3  mco_bite_hard.mp3  mco_bite_chew.mp3
+mon_bite = mco_snarl_short.mp3 mco_bite_soft.mp3  mco_bite_munch.mp3  mco_bite_long.mp3  mco_bite_short.mp3  mco_bite_gnash.mp3  mco_bite_chomp.mp3  mco_bite_regular.mp3  mco_bite_small.mp3  mco_bite_dainty.mp3  mco_bite_hard.mp3  mco_bite_chew.mp3
 
 # Attack - sting
 mon_sting = mco_castanet_trill.mp3 mco_tube_hit.mp3
