--- a/src/Makefile.src
+++ b/src/Makefile.src
@@ -30,6 +30,7 @@ HEADERS = \
 	ui-menu.h \
 	wizard.h \
 	z-bitflag.h \
+	z-color.h \
 	z-file.h \
 	z-form.h \
 	z-msg.h \
@@ -42,8 +43,8 @@ HEADERS = \
 	z-util.h \
 	z-virt.h
 
-ZFILES = z-bitflag.o z-file.o z-form.o z-msg.o z-quark.o z-queue.o z-rand.o \
-	z-set.o z-term.o z-type.o z-util.o z-virt.o z-textblock.o
+ZFILES = z-bitflag.o z-color.o z-file.o z-form.o z-msg.o z-quark.o z-queue.o \
+	z-rand.o z-set.o z-term.o z-type.o z-util.o z-virt.o z-textblock.o
 
 # MAINFILES is defined by autotools (or manually) to be combinations of these
 
