--- a/src/Makefile.src
+++ b/src/Makefile.src
@@ -5,7 +5,7 @@
 # across a range of different makefiles, to cut down on maintenance.
 #
 
-VERSION = 3.5-dev
+VERSION = 3.5.0
 COPYRIGHT = (c) 1995-2013 Angband contributors
 
 HEADERS = \
