Move coords_to_dir() from util.c to player/p-util.c and rename util to ui-input because it now only contains textui input code.

--- a/src/Makefile.src
+++ b/src/Makefile.src
@@ -169,11 +169,11 @@ ANGFILES = \
 	ui.o \
 	ui-birth.o \
 	ui-event.o \
+	ui-input.o \
 	ui-knowledge.o \
 	ui-menu.o \
 	ui-options.o \
 	ui-spell.o \
-	util.o  \
 	variable.o \
 	wiz-spoil.o \
 	wiz-stats.o \
